--- a/r_d_redux_todo/package.json
+++ b/r_d_redux_todo/package.json
@@ -8,7 +8,8 @@
     "react-addons-perf": "^15.4.2",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "todomvc-app-css": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
